Fixed zoom meeting app not showing up after meeting is joined

--- a/career-coach/src/styles.scss
+++ b/career-coach/src/styles.scss
@@ -28,7 +28,7 @@ body {
 }
 
 #zmmtg-root {
-    display: none;
+    display: contents;
   }
 
 .mat-button {
